--- a/.gitignore
+++ b/.gitignore
@@ -4,3 +4,12 @@ vendor
 .idea
 .php_cs.cache
 .phpunit.result.cache
+###> symfony/framework-bundle ###
+/.env.local
+/.env.local.php
+/.env.*.local
+/config/secrets/prod/prod.decrypt.private.php
+/public/bundles/
+/var/
+/vendor/
+###< symfony/framework-bundle ###
