--- a/composer.json
+++ b/composer.json
@@ -22,6 +22,7 @@
     "ext-curl": "*",
     "ext-json": "*",
     "jms/serializer-bundle": "^3.7",
+    "nelmio/api-doc-bundle": "^3.7",
     "nyholm/psr7": "^1.3",
     "supervisorphp/supervisor": "^4.0",
     "symfony/flex": "^1.3.1",
@@ -42,5 +43,11 @@
   "prefer-stable": true,
   "require-dev": {
     "phpstan/phpstan": "^0.12.48"
+  },
+  "scripts": {
+    "auto-scripts": {
+      "cache:clear": "symfony-cmd",
+      "assets:install %PUBLIC_DIR%": "symfony-cmd"
+    }
   }
 }
