--- a/composer.json
+++ b/composer.json
@@ -27,9 +27,9 @@
     "supervisorphp/supervisor": "^4.0",
     "symfony/flex": "^1.3.1",
     "symfony/framework-bundle": "5.1.* || 4.4.*",
-    "symfony/http-client": "5.1.*",
-    "symfony/validator": "5.1.*",
-    "symfony/yaml": "5.1.*"
+    "symfony/http-client": "5.1.* || 4.4.*",
+    "symfony/validator": "5.1.*|| 4.4.*",
+    "symfony/yaml": "5.1.*|| 4.4.*"
   },
   "suggest": {
     "php-http/httplug-bundle": "to provide required HTTP client with ease."
